--- a/Pages/Editar/E_Paciente.razor
+++ b/Pages/Editar/E_Paciente.razor
@@ -1,150 +1,183 @@
 ﻿@page "/E_Paciente"
+@page "/E_Paciente/{PacienteID:int}"
 
 @inject PacienteBLL pacienteBll
 
 
 
-    <head>
-        <style>
-    .Entrada{
-        display: inline-block;
-        padding: 5px;
-        align-items: center;
-    }
-    .Entrada input{
-        border-radius: 50px;
-        background-color:#D9D9D9;
-        border-color: #D9D9D9;
-        border: 15px;
-        margin: 5px;
-    }
-    .Entrada label
-    {
-        margin: 5px;
-    }
-    .Entrada textarea{
-        background-color:#D9D9D9;
-        border-color: #D9D9D9;
-        border-radius: 15px;
-        width: 100%;
-    }
-        </style>
-    </head>
+<head>
+    <style>
+        .Entrada {
+            display: inline-block;
+            padding: 5px;
+            align-items: center;
+        }
 
-    
-        <h1>Editar Paciente</h1>
+        .Entrada input {
+            border-radius: 50px;
+            background-color: #D9D9D9;
+            border-color: #D9D9D9;
+            border: 15px;
+            margin: 5px;
+        }
 
-        <EditForm model="Paciente">
+        .Entrada label {
+            margin: 5px;
+        }
 
-        <div class="Entrada">
-        <label for="Nombre" >Nombre:</label>
-        <input @bind-value="paciente.PrimerNombre" type="Nombre"  id="Nombre"  name="Nombre">
-        </div>
+        .Entrada textarea {
+            background-color: #D9D9D9;
+            border-color: #D9D9D9;
+            border-radius: 15px;
+            width: 100%;
+        }
 
-        <div class="Entrada">
-        <label for="S_Nombre" >Segundo Nombre:</label>
-        <input @bind-value="paciente.SegundoNombre" type="S_Nombre"  id="S_Nombre"  name="S_Nombre">
-        </div>
-        <br>
-        <div class="Entrada">
-        <label for="P_Apellido" >Primer Apellido:</label>
-        <input @bind-value="paciente.PrimerApellido" type="P_Apellido"  id="P_Apellido"  name="P_Apellido">
-        </div>
+        .Entrada select {
+            width: 200px;
+            height: 35px;
+            border-radius: 50px;
+            background-color: #D9D9D9;
+            border-color: #D9D9D9;
+            border: 15px;
+            margin: 5px;
+        }
 
-        <div class="Entrada">
-        <label for="S_Apellido" >Segundo Apellido:</label>
-        <input @bind-value="paciente.SegundoApellido" type="S_Apellido"  id="S_Apellido"  name="S_Apellido">
-        </div>
-        <br>
+        body {
+            background-color: white;
+        }
+    </style>
+</head>
 
-        <div class="Entrada">
-        <label for="Sexo" >Sexo:</label>
-        <input @bind-value="paciente.Sexo" type="Sexo"  id="Sexo"  name="Sexo">
-        </div>
 
-        <div class="Entrada">
-        <label for="F_Nacimiento" >Fecha de Nacimiento:</label>
-        <input type="F_Nacimiento"  id="F_Nacimiento"  name="F_Nacimiento">
-        </div>
-        <br>
-        <div class="Entrada">
-        <label for="Cedula" >Cedula:</label>
-        <input type="Cedula"  id="Cedula"  name="Cedula">
-        </div>
+<h1>Editar Paciente</h1>
 
-        <div class="Entrada">
-        <label for="O_Laboral" >Ocupacion Laboral:</label>
-        <input type="O_Laboral"  id="O_Laboral"  name="O_Laboral">
-        </div>
+<EditForm model="Paciente">
 
-        <hr>
-        <span style="color: rgb(103, 100, 100);">En caso de ser menor</span><br>
-        <div class="Entrada">
-        <label for="N_Tutor" >Nombre Tutor:</label>
-        <input type="N_Tutor"  id="N_Tutor"  name="N_Tutor">
-        </div>
+    <div class="Entrada">
+        <label for="Nombre">Nombre:</label>
+        <input @bind-value="paciente.PrimerNombre" type="Nombre" id="Nombre" name="Nombre">
+    </div>
 
-        <div class="Entrada">
-        <label for="C_Tutor" >Cedula Tutor:</label>
-        <input type="C_Tutor"  id="C_Tutor"  name="C_Tutor">
-        </div>
+    <div class="Entrada">
+        <label for="S_Nombre">Segundo Nombre:</label>
+        <input @bind-value="paciente.SegundoNombre" type="S_Nombre" id="S_Nombre" name="S_Nombre">
+    </div>
+    <br>
+    <div class="Entrada">
+        <label for="P_Apellido">Primer Apellido:</label>
+        <input @bind-value="paciente.PrimerApellido" type="P_Apellido" id="P_Apellido" name="P_Apellido">
+    </div>
 
-        <hr>
-        
-        <div class="Entrada">
-        <label for="Alergias" >Alergias:</label>
-        <input type="Alergias"  id="Alergias"  name="Alergias">
-        </div>
+    <div class="Entrada">
+        <label for="S_Apellido">Segundo Apellido:</label>
+        <input @bind-value="paciente.SegundoApellido" type="S_Apellido" id="S_Apellido" name="S_Apellido">
+    </div>
+    <br>
 
-        <div class="Entrada">
-        <label for="Telefono" >Telefono:</label>
-        <input type="Telefono"  id="Telefono"  name="Telefono">
-        </div>
+    <div class="Entrada">
+        <label>Sexo:</label>
+        <select id="Persona" name="Persona" @bind="paciente.Sexo">
+            @foreach (var item in Sexos)
+            {
 
-        <div class="Entrada">
-        <label for="Direccion" >Direccion:</label>
-        <input @bind-value="paciente.Direccion" type="Direccion"  id="Direccion"  name="Direccion">
-        </div>
+                <option value="@item"> @item</option>
+            }
 
-        <div class="Entrada">
-        <label for="Provincia" >Provincia:</label>
-        <input @bind-value="paciente.Provincia" type="Provincia"  id="Provincia"  name="Provincia">
-        </div>
+        </select>
+    </div>
 
-        <div class="Entrada">
-        <label for="Municipio" >Municipio:</label>
-        <input @bind-value="paciente.Municipio" type="Municipio"  id="Municipio"  name="Municipio">
-        </div>
+    <div class="Entrada">
+        <label for="F_Nacimiento">Fecha de Nacimiento:</label>
+        <input type="F_Nacimiento" @bind-value="paciente.FechadeNacimiento" id="F_Nacimiento" name="F_Nacimiento">
+    </div>
+    <br>
+    <div class="Entrada">
+        <label for="Cedula">Cedula:</label>
+        <input type="Cedula" id="Cedula" @bind-value="paciente.Cedula" name="Cedula">
+    </div>
+
+    <div class="Entrada">
+        <label for="O_Laboral">Ocupacion Laboral:</label>
+        <input type="O_Laboral" id="O_Laboral" @bind-value="paciente.Ocupacion" name="O_Laboral">
+    </div>
+
+    <hr>
+    <span style="color: rgb(103, 100, 100);">En caso de ser menor</span><br>
+    <div class="Entrada">
+        <label for="N_Tutor">Nombre Tutor:</label>
+        <input type="N_Tutor" id="N_Tutor" @bind-value="paciente.Tutor" name="N_Tutor">
+    </div>
+
+    <div class="Entrada">
+        <label for="C_Tutor">Cedula Tutor:</label>
+        <input type="C_Tutor" id="C_Tutor" @bind-value="paciente.CedulaTutor" name="C_Tutor">
+    </div>
+
+    <hr>
+
+    <div class="Entrada">
+        <label for="Alergias">Alergias:</label>
+        <input type="Alergias" id="Alergias" @bind-value="paciente.Alergia" name="Alergias">
+    </div>
+
+    <div class="Entrada">
+        <label for="Telefono">Telefono:</label>
+        <input type="Telefono" id="Telefono" @bind-value="paciente.Telefono" name="Telefono">
+    </div>
+
+    <div class="Entrada">
+        <label for="Direccion">Direccion:</label>
+        <input @bind-value="paciente.Direccion" type="Direccion" id="Direccion" name="Direccion">
+    </div>
+
+    <div class="Entrada">
+        <label for="Provincia">Provincia:</label>
+        <input @bind-value="paciente.Provincia" type="Provincia" id="Provincia" name="Provincia">
+    </div>
+
+    <div class="Entrada">
+        <label for="Municipio">Municipio:</label>
+        <input @bind-value="paciente.Municipio" type="Municipio" id="Municipio" name="Municipio">
+    </div>
 
     <center>
-        <button type="button" class="btn btn-primary" style="padding-left: 50px;padding-right: 50px; border-radius:50px; Background-Color:#3AB5F4; border-color:#3AB5F4; margin:10px;"@onclick ="Guardar">Guardar</button>
+        <a href="/V_Paciente/@paciente.PacienteID"><button type="button" class="btn btn-primary"
+                style="padding-left: 50px;padding-right: 50px; border-radius:50px; Background-Color:#3AB5F4; border-color:#3AB5F4; margin:10px;"
+                @onclick="Guardar">Guardar</button></a>
+        <a href="/V_Paciente/@paciente.PacienteID"><button type="button" class="btn btn-danger"
+                style="padding-left: 50px;padding-right: 50px; border-radius:50px; margin:10px;">Cancelar</button></a>
     </center>
 
-    </EditForm>
-    
+</EditForm>
+
 
 
 @code {
 
+    [Parameter]
+    public int PacienteID { get; set; }
+
+    List<Sexo> Sexos = Enum.GetValues(typeof(Sexo))
+    .Cast<Sexo>()
+    .ToList();
+    public Paciente paciente { get; set; } = new Paciente();
 
 
+    protected override void OnInitialized()
+    {
 
-    public Paciente paciente {get; set;} = new Paciente();
-
-
-    protected override void OnInitialized(){
-
-        paciente.PacienteID=0;
+        paciente.PacienteID = PacienteID;
+        Buscar();
     }
 
-     private void Buscar()
+    private void Buscar()
     {
         var pacienteEncontrado = pacienteBll.Buscar(paciente.PacienteID);
-        if(pacienteEncontrado != null)
+        if (pacienteEncontrado != null)
         {
             Console.WriteLine($"Se encontro una ocupacion con el ID{this.paciente.PacienteID}");
             this.paciente = pacienteEncontrado;
-            
+
         }
         else
         {
@@ -154,54 +187,59 @@
     }
 
 
-    public void Nuevo(){
+    public void Nuevo()
+    {
         this.paciente = new Paciente();
     }
 
-     public void Guardar(){
+    public void Guardar()
+    {
 
         pacienteBll.Guardar(this.paciente);
         Console.WriteLine($"Se guardo en el {this.paciente.PacienteID}");
         this.Nuevo();
-        
-        
+
+
         //Console.WriteLine("Campos no validos o no completados");
     }
-    
 
 
 
-    public void eliminar(){
 
-       
-        
-    bool RES = pacienteBll.Eliminar(this.paciente);
+    public void eliminar()
+    {
 
-    if(RES == false){
-        Console.WriteLine("Eliminado Correctamente");
-        Nuevo();
-    }
-    else{
-       Console.WriteLine("No se borro nada");
-    }
-            
-            
 
-        
-       
-        
-    //Nuevo();
-    //Console.WriteLine("Id no valido");
-            
-        
-        
-        
-      
-       
-       
-        
-        
-        
+
+        bool RES = pacienteBll.Eliminar(this.paciente);
+
+        if (RES == false)
+        {
+            Console.WriteLine("Eliminado Correctamente");
+            Nuevo();
+        }
+        else
+        {
+            Console.WriteLine("No se borro nada");
+        }
+
+
+
+
+
+
+        //Nuevo();
+        //Console.WriteLine("Id no valido");
+
+
+
+
+
+
+
+
+
+
     }
 
 
