--- a/Pages/Registros/R_Paciente.razor
+++ b/Pages/Registros/R_Paciente.razor
@@ -4,31 +4,34 @@
 
 
 
-    <head>
-        <style>
-    .Entrada{
-        display: inline-block;
-        padding: 5px;
-        align-items: center;
-    }
-    .Entrada input{
-        border-radius: 50px;
-        background-color:#D9D9D9;
-        border-color: #D9D9D9;
-        border: 15px;
-        margin: 5px;
-    }
-    .Entrada label
-    {
-        margin: 5px;
-    }
-    .Entrada textarea{
-        background-color:#D9D9D9;
-        border-color: #D9D9D9;
-        border-radius: 15px;
-        width: 100%;
-    }
-            .Entrada select {
+<head>
+    <style>
+        .Entrada {
+            display: inline-block;
+            padding: 5px;
+            align-items: center;
+        }
+
+        .Entrada input {
+            border-radius: 50px;
+            background-color: #D9D9D9;
+            border-color: #D9D9D9;
+            border: 15px;
+            margin: 5px;
+        }
+
+        .Entrada label {
+            margin: 5px;
+        }
+
+        .Entrada textarea {
+            background-color: #D9D9D9;
+            border-color: #D9D9D9;
+            border-radius: 15px;
+            width: 100%;
+        }
+
+        .Entrada select {
             width: 200px;
             height: 35px;
             border-radius: 50px;
@@ -37,107 +40,113 @@
             border: 15px;
             margin: 5px;
         }
-        </style>
-    </head>
 
-    
-        <h1>Registrar Paciente</h1>
+        body {
+            background-color: white;
+        }
+    </style>
+</head>
 
-        <EditForm model="Paciente">
 
-        <div class="Entrada">
-        <label for="Nombre" >Nombre:</label>
-        <input @bind-value="paciente.PrimerNombre" type="Nombre"  id="Nombre"  name="Nombre">
-        </div>
+<h1>Registrar Paciente</h1>
 
-        <div class="Entrada">
-        <label for="S_Nombre" >Segundo Nombre:</label>
-        <input @bind-value="paciente.SegundoNombre" type="S_Nombre"  id="S_Nombre"  name="S_Nombre">
-        </div>
-        <br>
-        <div class="Entrada">
-        <label for="P_Apellido" >Primer Apellido:</label>
-        <input @bind-value="paciente.PrimerApellido" type="P_Apellido"  id="P_Apellido"  name="P_Apellido">
-        </div>
+<EditForm model="Paciente">
 
-        <div class="Entrada">
-        <label for="S_Apellido" >Segundo Apellido:</label>
-        <input @bind-value="paciente.SegundoApellido" type="S_Apellido"  id="S_Apellido"  name="S_Apellido">
-        </div>
-        <br>
+    <div class="Entrada">
+        <label for="Nombre">Nombre:</label>
+        <input @bind-value="paciente.PrimerNombre" type="Nombre" id="Nombre" name="Nombre">
+    </div>
 
-        <div class="Entrada">
-            <label >Sexo:</label>
-            <select id="Persona" name="Persona" @bind="paciente.Sexo">
-            @foreach(var item in Sexos)
+    <div class="Entrada">
+        <label for="S_Nombre">Segundo Nombre:</label>
+        <input @bind-value="paciente.SegundoNombre" type="S_Nombre" id="S_Nombre" name="S_Nombre">
+    </div>
+    <br>
+    <div class="Entrada">
+        <label for="P_Apellido">Primer Apellido:</label>
+        <input @bind-value="paciente.PrimerApellido" type="P_Apellido" id="P_Apellido" name="P_Apellido">
+    </div>
+
+    <div class="Entrada">
+        <label for="S_Apellido">Segundo Apellido:</label>
+        <input @bind-value="paciente.SegundoApellido" type="S_Apellido" id="S_Apellido" name="S_Apellido">
+    </div>
+    <br>
+
+    <div class="Entrada">
+        <label>Sexo:</label>
+        <select id="Persona" name="Persona" @bind="paciente.Sexo">
+            @foreach (var item in Sexos)
             {
 
                 <option value="@item"> @item</option>
             }
-            
+
         </select>
-        </div>
+    </div>
 
-        <div class="Entrada">
-        <label for="F_Nacimiento" >Fecha de Nacimiento:</label>
-        <input type="F_Nacimiento" @bind-value="paciente.FechadeNacimiento" id="F_Nacimiento"  name="F_Nacimiento">
-        </div>
-        <br>
-        <div class="Entrada">
-        <label for="Cedula" >Cedula:</label>
-        <input type="Cedula"  id="Cedula" @bind-value="paciente.Cedula"  name="Cedula">
-        </div>
+    <div class="Entrada">
+        <label for="F_Nacimiento">Fecha de Nacimiento:</label>
+        <input type="F_Nacimiento" @bind-value="paciente.FechadeNacimiento" id="F_Nacimiento" name="F_Nacimiento">
+    </div>
+    <br>
+    <div class="Entrada">
+        <label for="Cedula">Cedula:</label>
+        <input type="Cedula" id="Cedula" @bind-value="paciente.Cedula" name="Cedula">
+    </div>
 
-        <div class="Entrada">
-        <label for="O_Laboral" >Ocupacion Laboral:</label>
-        <input type="O_Laboral"  id="O_Laboral" @bind-value="paciente.Ocupacion" name="O_Laboral">
-        </div>
+    <div class="Entrada">
+        <label for="O_Laboral">Ocupacion Laboral:</label>
+        <input type="O_Laboral" id="O_Laboral" @bind-value="paciente.Ocupacion" name="O_Laboral">
+    </div>
 
-        <hr>
-        <span style="color: rgb(103, 100, 100);">En caso de ser menor</span><br>
-        <div class="Entrada">
-        <label for="N_Tutor" >Nombre Tutor:</label>
-        <input type="N_Tutor"  id="N_Tutor" @bind-value="paciente.Tutor" name="N_Tutor">
-        </div>
+    <hr>
+    <span style="color: rgb(103, 100, 100);">En caso de ser menor</span><br>
+    <div class="Entrada">
+        <label for="N_Tutor">Nombre Tutor:</label>
+        <input type="N_Tutor" id="N_Tutor" @bind-value="paciente.Tutor" name="N_Tutor">
+    </div>
 
-        <div class="Entrada">
-        <label for="C_Tutor" >Cedula Tutor:</label>
-        <input type="C_Tutor"  id="C_Tutor" @bind-value="paciente.CedulaTutor" name="C_Tutor">
-        </div>
+    <div class="Entrada">
+        <label for="C_Tutor">Cedula Tutor:</label>
+        <input type="C_Tutor" id="C_Tutor" @bind-value="paciente.CedulaTutor" name="C_Tutor">
+    </div>
 
-        <hr>
-        
-        <div class="Entrada">
-        <label for="Alergias" >Alergias:</label>
-        <input type="Alergias"  id="Alergias" @bind-value="paciente.Alergia" name="Alergias">
-        </div>
+    <hr>
 
-        <div class="Entrada">
-        <label for="Telefono" >Telefono:</label>
-        <input type="Telefono"  id="Telefono"  @bind-value="paciente.Telefono" name="Telefono">
-        </div>
+    <div class="Entrada">
+        <label for="Alergias">Alergias:</label>
+        <input type="Alergias" id="Alergias" @bind-value="paciente.Alergia" name="Alergias">
+    </div>
 
-        <div class="Entrada">
-        <label for="Direccion" >Direccion:</label>
-        <input @bind-value="paciente.Direccion" type="Direccion"  id="Direccion"  name="Direccion">
-        </div>
+    <div class="Entrada">
+        <label for="Telefono">Telefono:</label>
+        <input type="Telefono" id="Telefono" @bind-value="paciente.Telefono" name="Telefono">
+    </div>
 
-        <div class="Entrada">
-        <label for="Provincia" >Provincia:</label>
-        <input @bind-value="paciente.Provincia" type="Provincia"  id="Provincia"  name="Provincia">
-        </div>
+    <div class="Entrada">
+        <label for="Direccion">Direccion:</label>
+        <input @bind-value="paciente.Direccion" type="Direccion" id="Direccion" name="Direccion">
+    </div>
 
-        <div class="Entrada">
-        <label for="Municipio" >Municipio:</label>
-        <input @bind-value="paciente.Municipio" type="Municipio"  id="Municipio"  name="Municipio">
-        </div>
+    <div class="Entrada">
+        <label for="Provincia">Provincia:</label>
+        <input @bind-value="paciente.Provincia" type="Provincia" id="Provincia" name="Provincia">
+    </div>
+
+    <div class="Entrada">
+        <label for="Municipio">Municipio:</label>
+        <input @bind-value="paciente.Municipio" type="Municipio" id="Municipio" name="Municipio">
+    </div>
 
     <center>
-        <button type="button" class="btn btn-primary" style="padding-left: 50px;padding-right: 50px; border-radius:50px; Background-Color:#3AB5F4; border-color:#3AB5F4; margin:10px;"@onclick ="Guardar">Registrar</button>
+        <button type="button" class="btn btn-primary"
+            style="padding-left: 50px;padding-right: 50px; border-radius:50px; Background-Color:#3AB5F4; border-color:#3AB5F4; margin:10px;"
+            @onclick="Guardar">Registrar</button>
     </center>
 
-    </EditForm>
-    
+</EditForm>
+
 
 
 @code {
@@ -145,23 +154,24 @@
 
 
 
-    public Paciente paciente {get; set;} = new Paciente();
+    public Paciente paciente { get; set; } = new Paciente();
     List<Sexo> Sexos = Enum.GetValues(typeof(Sexo))
-                            .Cast<Sexo>()
-                            .ToList();
-    protected override void OnInitialized(){
+    .Cast<Sexo>()
+    .ToList();
+    protected override void OnInitialized()
+    {
 
-        paciente.PacienteID=0;
+        paciente.PacienteID = 0;
     }
 
-     private void Buscar()
+    private void Buscar()
     {
         var pacienteEncontrado = pacienteBll.Buscar(paciente.PacienteID);
-        if(pacienteEncontrado != null)
+        if (pacienteEncontrado != null)
         {
             Console.WriteLine($"Se encontro una ocupacion con el ID{this.paciente.PacienteID}");
             this.paciente = pacienteEncontrado;
-            
+
         }
         else
         {
@@ -171,54 +181,59 @@
     }
 
 
-    public void Nuevo(){
+    public void Nuevo()
+    {
         this.paciente = new Paciente();
     }
 
-     public void Guardar(){
+    public void Guardar()
+    {
 
         pacienteBll.Guardar(this.paciente);
         Console.WriteLine($"Se guardo en el {this.paciente.PacienteID}");
         this.Nuevo();
-        
-        
+
+
         //Console.WriteLine("Campos no validos o no completados");
     }
-    
 
 
 
-    public void eliminar(){
 
-       
-        
-    bool RES = pacienteBll.Eliminar(this.paciente);
+    public void eliminar()
+    {
 
-    if(RES == false){
-        Console.WriteLine("Eliminado Correctamente");
-        Nuevo();
-    }
-    else{
-       Console.WriteLine("No se borro nada");
-    }
-            
-            
 
-        
-       
-        
-    //Nuevo();
-    //Console.WriteLine("Id no valido");
-            
-        
-        
-        
-      
-       
-       
-        
-        
-        
+
+        bool RES = pacienteBll.Eliminar(this.paciente);
+
+        if (RES == false)
+        {
+            Console.WriteLine("Eliminado Correctamente");
+            Nuevo();
+        }
+        else
+        {
+            Console.WriteLine("No se borro nada");
+        }
+
+
+
+
+
+
+        //Nuevo();
+        //Console.WriteLine("Id no valido");
+
+
+
+
+
+
+
+
+
+
     }
 
 
