--- a/Pages/Registros/R_Emergencia.razor
+++ b/Pages/Registros/R_Emergencia.razor
@@ -129,7 +129,7 @@
         </div>
 
         <div class="Entrada" style="display: inline-block;">
-            <label>Laboratorios</label>
+            <label>Laboratorioss</label>
             <label for="Hemograma">Hemograma:</label>
             <input type="Hemograma" @bind-value="emergencia.Hemogramas" id="Hemograma" name="Hemograma">
             <label for="Ex_Orina">Ex.Orina:</label>
