--- a/Pages/Registros/R_Emergencia.razor
+++ b/Pages/Registros/R_Emergencia.razor
@@ -63,7 +63,7 @@
                     <div>
                         <RadzenDropDown AllowClear="true" TValue="string"
                             FilterCaseSensitivity="FilterCaseSensitivity.CaseInsensitive" AllowFiltering="true"
-                            class="w-100" Placeholder="Paciente" bind="Demergencia.PacienteID" Data="Pacientes.GetList()"
+                            class="w-100" Placeholder="Paciente"  Data="Pacientes.GetList()"
                             TextProperty="Cedula" ValueProperty="PacienteID" />
                     </div>
 
@@ -172,7 +172,7 @@
 
 
     public Emergencia emergencia { get; set; } = new Emergencia();
-    public DetalleEmergencia Demergencia { get; set; } = new DetalleEmergencia();
+    @* public DetalleEmergencia Demergencia { get; set; } = new DetalleEmergencia(); *@
     public Paciente? paciente = new Paciente();
 
     protected override void OnInitialized()
@@ -206,20 +206,7 @@
 
     public void Guardar()
     {
-        paciente = Pacientes.Buscar(Demergencia.PacienteID);
-
-        Demergencia.OrdenID=emergencia.OrdenID;
-        Demergencia.PrimerNombre = paciente.PrimerNombre;
-        Demergencia.SegundoNombre=paciente.SegundoNombre;
-        Demergencia.PrimerApellido =paciente.PrimerApellido;
-        Demergencia.SegundoApellido =paciente.SegundoApellido;
-        Demergencia.Sexo =paciente.Sexo;
-        Demergencia.Cedula=paciente.Cedula;
-        Demergencia.CedulaTutor =paciente.CedulaTutor;
-        Demergencia.Fecha =emergencia.Fecha;
-
-
-
+       
         emergenciaBll.Guardar(this.emergencia);
 
         Console.WriteLine($"Se guardo en el {this.emergencia.OrdenID}");
