--- a/Pages/Registros/R_EmergenciaAsegurada.razor
+++ b/Pages/Registros/R_EmergenciaAsegurada.razor
@@ -199,7 +199,7 @@
         <textarea type="TyM" id="TyM" style="width: 100%;" @bind="emergencia.TyM" name="TyM"></textarea>
     </div>
     <center>
-        <button type="button" class="btn btn-primary"
+        <button @onclick="Guardar" type="button" class="btn btn-primary"
             style="padding-left: 50px;padding-right: 50px; border-radius:50px; Background-Color:#3AB5F4; border-color:#3AB5F4; margin:10px;">Registrar</button>
     </center>
     </div>
